--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <div class="logo">
             <img src="./img/Logomark.svg" alt="logomark">
+            <h6>Untitled UI</h6>
         </div>
         <nav class="nav">
             <ul>
                 <li>
-                    <a href="/projects">Projects</a>
+                    <a href="/Projects">Projects</a>
                 </li>
                 <li>
-                    <a href="/projects">Projects</a>
+                    <a href="/Filters">Filters</a>
                 </li>
                 <li>
-                    <a href="/projects">Projects</a>
+                    <a href="/Dashboards">Dashboards</a>
                 </li>
                 <li>
-                    <a href="/projects">Projects</a>
+                    <a href="/People">People</a>
                 </li>
                 <li>
-                    <a href="/projects">Projects</a>
+                    <a href="/Apps">Apps</a>
                 </li>
                 <li>
-                    <a href="/projects">Projects</a>
+                    <a href="/Create" class="btn">Create</a>
                 </li>
             </ul>
         </nav>
@@ -37,7 +38,12 @@
             <img src="./img/Iconbutton.svg" alt="Iconbutton">
             <img src="./img/Iconbutton_1.svg" alt="Iconbutton_1">
             <img src="./img/Iconbutton_2.svg" alt="Iconbutton_2">
-            <img src="./img/Avatar_photo.svg" alt="Iconbutton_3">
+            <img src="./img/Avatar_photo.svg" alt="profile" class="profile">
+        </div>
+        <div class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </header>
 </body>
