--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/global.css">
 </head>
 <body>
     <header>
@@ -46,5 +46,20 @@
             <span></span>
         </div>
     </header>
+    <div class="analytics">
+        <h1>Beautiful analytics to grow smarter</h1>
+        <p>Powerful, self-serve product and growth analytics to help you convert, engage, <br>
+            and retain more users. Trusted by over 4,000 startups.</p>
+        <div class="button_al">
+            <button class="btn_white_demo">
+                <img src="img/play-circle.svg" alt="play-circle">Demo
+            </button> 
+            <button class="btn_purple_sign">Sign up</button>
+        </div>
+        <div class="img_wrapper">
+            <img src="img/MacBookPro16.webp" alt="macbook" class="img_mc">
+            <img src="img/Screen_laptop.webp" alt="screen" class="img_src">
+        </div>
+    </div>
 </body>
 </html>
